--- a/index.html
+++ b/index.html
@@ -4,12 +4,13 @@
 
       <meta charset="utf-8">
       <title>Titre de la page</title>
+      <link rel='stylesheet' id='google-webfonts-css'  href='http://fonts.googleapis.com/css?family=Terminal+Dosis%3A200%2C400&#038;ver=4.2.2' type='text/css' media='all' />-
       <link rel="stylesheet" href="/style.css">
 
     </head>
     <body>
 
-      <section id="corps">
+      <main>
 
 
          <h1>Origami</h1>
@@ -37,7 +38,7 @@
           </div>
 
 
-              <div class="fixe">
+              <!-- <div class="fixe"> 1er menu deroulant!
 
                    <ul>
                       <li class="list">Blog Home</li>
@@ -45,10 +46,49 @@
                       <li class="list">A Static Front Page</li>
                 </ul>
 
-              </div>
+              </div> -->
 
 
-      </section>
+                            <h2>Up in the clouds</h2>
+
+
+                 <h5 id="milieu">On May 6, 2013 by <strong>Greg Priday</strong> With 0 Comments - <strong>Images, Uncalegorized</strong></h5>
+
+
+                    <div class="text">
+
+                         <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+
+
+                           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat.</p>
+
+
+                              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa. </p>
+
+
+                                 <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Qui officia deserunt mollit anim id est laborumqui officia deserunt mollit anim id est laborum. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+                                     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+
+
+                  </div>
+
+
+                       <div id="deco"></div>
+
+
+                          <div id="older">
+
+                                 <div id="old">Older Entries</div>
+
+                  </div>
+
+
+                       <footer></footer>
+
+
+      </main>
        <!-- Ceci est un commentaire. -->
     </body>
   </html>
