doucement mais surement un peu chez morphée

--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@
       <main>
 
 
+      <section class="one">
+
          <h1>Origami</h1>
 
            <h5>A Content Focused Wordpress Theme</h5>
@@ -37,6 +39,8 @@
 
           </div>
 
+        </section>
+
 
               <!-- <div class="fixe"> 1er menu deroulant!
 
@@ -48,6 +52,9 @@
 
               </div> -->
 
+
+
+            <section class="two">
 
                             <h2>Up in the clouds</h2>
 
@@ -75,6 +82,12 @@
                   </div>
 
 
+
+                </section>
+
+
+                   <section class="three">
+
                        <div id="deco"></div>
 
 
@@ -85,8 +98,20 @@
                   </div>
 
 
-                       <footer></footer>
+                       <footer>
 
+                         <div class="four-column">
+
+                            <p>recent opost up on the table to eat the boosbijd jddokb ooslkhfs dks pmsjgi JHhFJLJ IH</P>
+                              <P>JDHGD FJDD KFKOFJDN KIPDWIP kdgjglksp sguey odig dhfoif^gofjgl ioeù VQÙOFOIF </P>
+                              <P>HDHFOPPGPBKDJUHIUGghkjxfoisig oigàfuhfifgbjid__eçrç,=e)v:$go ml l Jdkihf hdfH</p>
+                                <p>gjdugiogfifknphojh;b oihpritho iruhoiuvnày=q,b:vê$êfe=e7:$pf*r7f*$f4*fphiho</p>
+                              </div>
+
+
+                       </footer>
+
+           </section>
 
       </main>
        <!-- Ceci est un commentaire. -->
